# Risma

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  _calculator.cpp  _calculator.h  _package.cpp  _portfolio.cpp  _portfolioManager.cpp  _portfolioManager.h  _varCalculator.cpp  _varCalculator.hpp  cli.py  playbook.tex  portfolio.py  update_csv.py  varCalculator.py
.github/workflows/: build_and_test.yml
cpp_module/: main.cpp  portfolio.cpp  var_calculator.cpp
cpp_module/include/: portfolio.hpp  var_calculator.hpp
data/: prices.csv
python_module/: main.py
